# dds_project

./: .gitignore  Cargo.toml  README.md  checks.lua  dds-system.vsdx  main.lua  ~$$dds-system.~vsdx
controller-page/: controll-page.ts  html-controller-buf.html  simple-controller.html  simple-html-controller.html  styles.css
frontend/: Cargo.toml  cfg.toml
frontend/config/: cfg.toml  mcucfg.toml
frontend/src/: cli.rs  config.rs  control.rs  data.rs  ddserror.rs  ddsinfo.toml  main.rs  nets.rs  rawtests.rs  register_control.rs  register_controller.rs
hardware/dds_pcb/: BOM_AD9959DDSC.xlsx
luatos/: checks.lua  data_parser.lua  dds_defs.lua  dds_spi.lua  ddsdemo.lua  esp32-hal-spi.h  http-utils.lua  main.lua  mcu_defs.lua  origin_main.lua  rainmaker_helper.lua  ref.c  ref.h  rtchelper.lua  screen0.lua  serial_io.lua  tcpsrv.lua  wifi-utils.lua
luatos/connection/: http-utils.lua  mqtts.lua  tcpsrv.lua  wifi-manager.lua  wifimanager.lua
luatos/handler/: data_handler.lua
luatos/rubish/: main.lua  origin_main.lua
luatos/utils/: ref.lua
luatos_tests/: main.lua
mcu/: checks.lua  data_handler.lua  ddss.lua  log_context.lua  main.lua  mcus.lua  mqtts.lua  parser.lua  refmain.lua  serial_io.lua  tcpsrv.lua  utils.lua  wifi-manager.lua
src/: main.rs
