[package]
name = "DDSCLIControl"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.3" , features = [ "derive", "cargo", "unstable-doc"] }
# serial = "v0.4.0"
serde =  "^1.0.197"
serde_json = "1.0"
config = "0.14.0"
lazy_static = "^1.4.0"
notify = "6.1.0"
colored = "2.1.0"
exitcode = "*"
# delay_timer


[features]
default = []
debug = ["costy_debug"]
costy_debug = []
